--- a/tpe1/src/css/EditarFuncion.css
+++ b/tpe1/src/css/EditarFuncion.css
@@ -15,6 +15,10 @@
     width: auto;
 }
 
+.color-displayer {
+    width: 20%;
+}
+
 @media (min-width: 1000px) {
     .modal-dialog {
         max-width: 700px;
