--- a/tpe1/src/css/App.css
+++ b/tpe1/src/css/App.css
@@ -22,6 +22,11 @@
   font-size: large;
 }
 
+.simplert__body {
+  font-size: 20px !important;
+  font-weight: bold !important;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
