--- a/tpe1/src/css/App.css
+++ b/tpe1/src/css/App.css
@@ -27,6 +27,10 @@
   font-weight: bold !important;
 }
 
+.danger {
+  background-color: #dc3545 !important;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
