--- a/tpe1/src/css/PopUp.css
+++ b/tpe1/src/css/PopUp.css
@@ -1,3 +1,28 @@
 .popup-item {
     padding-bottom: 10px;
 }
+.color-picker-background {
+    background-color: #F9F9FA;
+    padding: 6px 6px 6px 6px;
+    width: 252px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #346FA1;
+}
+
+h6 {
+    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 36px;
+}
+
+.slider-width{
+    width: 300px;
+}
+.modal-width{
+    width: 400px;
+
+}
