--- a/tpe2/app/src/main/res/values/colors.xml
+++ b/tpe2/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="windowBackground">#FFFFFF</color>
     <color name="navigationBarColor">#000000</color>
     <color name="colorAccent">#6599BE</color>
+    <color name="list_divider">#d9d9d9</color>
 </resources>
